chore: code re-factoring