@@ -2,6 +2,9 @@ package com.epam.aidial.core.controller;
 
 import com.epam.aidial.core.Proxy;
 import com.epam.aidial.core.ProxyContext;
+import com.epam.aidial.core.config.Deployment;
+import com.epam.aidial.core.service.PermissionDeniedException;
+import com.epam.aidial.core.service.ResourceNotFoundException;
 import com.epam.aidial.core.util.HttpStatus;
 import io.vertx.core.Future;
 import lombok.extern.slf4j.Slf4j;
@@ -18,18 +21,51 @@ public class LimitController {
         this.context = context;
     }
 
-    public Future<?> getLimits(String deploymentName) {
-        proxy.getRateLimiter().getLimitStats(deploymentName, context).onSuccess(limitStats -> {
-            if (limitStats == null) {
-                context.respond(HttpStatus.NOT_FOUND);
-            } else {
-                context.respond(HttpStatus.OK, limitStats);
+    public Future<?> getLimits(String deploymentId) {
+        Deployment deployment = context.getConfig().selectDeployment(deploymentId);
+
+        Future<Deployment> deploymentFuture;
+        if (deployment != null) {
+            if (!DeploymentController.hasAccess(context, deployment)) {
+                log.error("LimitController. Forbidden deployment {}. Key: {}. User sub: {}", deploymentId, context.getProject(), context.getUserSub());
+                return context.respond(HttpStatus.FORBIDDEN, "Forbidden deployment: " + deploymentId);
             }
-        }).onFailure(error -> {
-            log.error("Failed to get limit stats", error);
-            context.respond(HttpStatus.INTERNAL_SERVER_ERROR,
-                    "Failed to get limit stats for deployment=%s".formatted(deploymentName));
-        });
+            deploymentFuture = Future.succeededFuture(deployment);
+        } else {
+            deploymentFuture = proxy.getVertx().executeBlocking(() ->
+                    proxy.getCustomApplicationService().getCustomApplication(deploymentId, context), false);
+        }
+        deploymentFuture.compose(dep -> {
+            if (dep == null) {
+                String error = String.format("LimitController. Deployment not found %s", deploymentId);
+                log.error(error);
+                context.respond(HttpStatus.NOT_FOUND, error);
+                return Future.succeededFuture();
+            }
+
+            return proxy.getRateLimiter().getLimitStats(dep, context).onSuccess(limitStats -> {
+                if (limitStats == null) {
+                    context.respond(HttpStatus.NOT_FOUND);
+                } else {
+                    context.respond(HttpStatus.OK, limitStats);
+                }
+            });
+        }).onFailure(error -> handleRequestError(deploymentId, error));
         return Future.succeededFuture();
     }
+
+    private void handleRequestError(String deploymentId, Throwable error) {
+        if (error instanceof PermissionDeniedException) {
+            log.error("LimitController. Forbidden deployment {}. Key: {}. User sub: {}", deploymentId, context.getProject(), context.getUserSub());
+            context.respond(HttpStatus.FORBIDDEN, error.getMessage());
+        } else if (error instanceof ResourceNotFoundException) {
+            log.error("LimitController. Deployment not found {}", deploymentId, error);
+            context.respond(HttpStatus.NOT_FOUND, error.getMessage());
+        } else {
+            log.error("LimitController. Failed to get limit stats", error);
+            context.respond(HttpStatus.INTERNAL_SERVER_ERROR,
+                    "Failed to get limit stats for deployment=%s".formatted(deploymentId));
+        }
+    }
+
 }
